--- a/index.html
+++ b/index.html
@@ -64,11 +64,33 @@
         </h2>
         <p class="max-w-md mx-auto text-center md:text-left md:mx-0">
           Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best
-          companies
-          around the globe. Our award-winning creations have transformed businesses through digital experiences that
-          bind to their
-          brand.
+          companies around the globe. Our award-winning creations have transformed businesses through digital
+          experiences that bind to their brand.
         </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Creations Section -->
+  <section id="creations">
+    <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
+      <!-- Creation Header -->
+      <div class="flex justify-center mb-20 md:justify-between">
+        <h2 class="text-4xl text-center uppercase md:text-left md:text-5xl">Our Creations</h2>
+        <button class="hidden btn md:block">See All</button>
+      </div>
+
+      <!-- items container -->
+      <div
+        class="flex flex-col justify-between space-y-6 w-full text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8">
+        <!-- item 1 -->
+        <div class="group relative overflow-hidden md:w-1/4">
+          <!-- image for desktop -->
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-deep-earth.jpg" alt="deep earth" />
+          <!-- image for mobile -->
+          <img class="w-full md:hidden" src="images/mobile/image-deep-earth.jpg" alt="deep earth" />
+        </div>
       </div>
     </div>
   </section>
