feat: enhance item display with new gradient effects and responsive h5 styling

--- a/index.html
+++ b/index.html
@@ -80,18 +80,96 @@
         <button class="hidden btn md:block">See All</button>
       </div>
 
-      <!-- items container -->
-      <div
-        class="flex flex-col justify-between space-y-6 w-full text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8">
+      <!-- items container 1 -->
+      <div class="item-container">
         <!-- item 1 -->
-        <div class="group relative overflow-hidden md:w-1/4">
-          <!-- image for desktop -->
+        <div class="group item">
           <img class="hidden w-full duration-200 md:block group-hover:scale-110"
             src="images/desktop/image-deep-earth.jpg" alt="deep earth" />
-          <!-- image for mobile -->
           <img class="w-full md:hidden" src="images/mobile/image-deep-earth.jpg" alt="deep earth" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>Deep Earth</h5>
+        </div>
+        <!-- item 2 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-night-arcade.jpg" alt="deep earth" />
+          <img class="w-full md:hidden" src="images/mobile/image-night-arcade.jpg" alt="night-arcade" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>Night Arcade</h5>
+        </div>
+        <!-- item 3 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-soccer-team.jpg" alt="Soccer Team VR" />
+          <img class="w-full md:hidden" src="images/mobile/image-soccer-team.jpg" alt="Soccer Team VR" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>Soccer Team VR</h5>
+        </div>
+        <!-- item 4 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110" src="images/desktop/image-grid.jpg"
+            alt="grid" />
+          <img class="w-full md:hidden" src="images/mobile/image-grid.jpg" alt="grid" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>The Grid</h5>
         </div>
       </div>
+
+      <!-- Item Container 2 -->
+      <div class="item-container mt-10">
+        <!-- item 1 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-from-above.jpg" alt="from above" />
+          <img class="w-full md:hidden" src="images/mobile/image-from-above.jpg" alt="from above" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>From Up Above VR</h5>
+        </div>
+        <!-- item 2 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-pocket-borealis.jpg" alt="deep earth" />
+          <img class="w-full md:hidden" src="images/mobile/image-pocket-borealis.jpg"
+            alt="bimage-pocket-borealis.jpg" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>Pocket Borealis</h5>
+        </div>
+        <!-- item 3 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110"
+            src="images/desktop/image-curiosity.jpg" alt="Soccer Team VR" />
+          <img class="w-full md:hidden" src="images/mobile/image-curiosity.jpg" alt="curiosity" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>The Curiosity</h5>
+        </div>
+        <!-- item 4 -->
+        <div class="group item">
+          <img class="hidden w-full duration-200 md:block group-hover:scale-110" src="images/desktop/image-fisheye.jpg"
+            alt="fiimage-fisheye.jpg" />
+          <img class="w-full md:hidden" src="images/mobile/image-fisheye.jpg" alt="fiimage-fisheye" />
+
+          <div class="item-gradient">
+          </div>
+          <h5>Make It Fisheye</h5>
+        </div>
+      </div>
+
+      <!-- Bottom Btn Container -->
     </div>
   </section>
 </body>
