--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
       </div>
 
       <!-- Bottom Btn Container -->
+      <div class="flex justify-center mt-10 md:hidden">
+        <button class="btn w-full md:hidden">See All</button>
+      </div>
     </div>
   </section>
 </body>
