--- a/index.html
+++ b/index.html
@@ -175,6 +175,73 @@
       </div>
     </div>
   </section>
+  <footer class="bg-black">
+    <!-- container -->
+    <div class="container max-w-6xl py-10 mx-auto">
+      <div class="flex flex-col items-center mb-8 space-y-6 md:flex-row md:space-y-0 md:justify-between md:items-start">
+        <!-- Menu & logo container -->
+        <div class="flex flex-col items-center space-y-8 md:items-start md:space-y-4">
+          <div class="h-8">
+            <img src="./images/logo.svg" alt="logo" class="w-44 md:ml-3" />
+          </div>
+
+          <div
+            class="flex flex-col items-center space-y-4 text-white font-bold md:ml-3 md:flex-row md:space-y-0 md:items-start md:space-x-6">
+            <div class="group h-10">
+              <a href="#">About</a>
+              <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+            </div>
+            <div class="group h-10">
+              <a href="#">Careers</a>
+              <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+            </div>
+            <div class="group h-10">
+              <a href="#">Events</a>
+              <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+            </div>
+            <div class="group h-10">
+              <a href="#">Products</a>
+              <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+            </div>
+            <div class="group h-10">
+              <a href="#">Support</a>
+              <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+            </div>
+          </div>
+        </div>
+        <!-- Social & Copy container -->
+        <div class="flex flex-col items-start justify-between text-gray-500 space-y-4">
+          <!-- Social -->
+          <div class="flex items-center justify-center mx-auto space-x-4 md:justify-end md:mx-0">
+            <div class="h-8 group">
+              <a href="#">
+                <img src="images/icon-facebook.svg" alt="icon-facebook">
+              </a>
+            </div>
+            <div class="h-8 group">
+              <a href="#">
+                <img src="images/icon-twitter.svg" alt="icon-twitter">
+              </a>
+            </div>
+            <div class="h-8 group">
+              <a href="#">
+                <img src="images/icon-pinterest.svg" alt="icon-pinterest">
+              </a>
+            </div>
+            <div class="h-8 group">
+              <a href="#">
+                <img src="images/icon-instagram.svg" alt="icon-instagram">
+              </a>
+            </div>
+          </div>
+          <!-- Copy -->
+          <div class="text-bold">
+            &copy; 2022 Loopstudios. All Rights Reserved
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
