--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/script.js"></script>
   <title>Loopstudios</title>
 </head>
 
 <body>
   <!-- Hero Section -->
   <section id="hero">
-    <div class="container mx-auto px-6 py-12">
+    <div class="container max-w-6xl mx-auto px-6 py-12">
       <nav class="flex items-center justify-between font-bold text-white">
         <img src="images/logo.svg" alt="logo" />
         <div class="hidden h-10 font-alata md:flex md:space-x-8">
@@ -42,9 +43,24 @@
             <div class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
           </div>
         </div>
-        <!-- @todo Hamburger Btn -->
+        <!-- Hamburger Btn -->
+        <div class="md:hidden">
+          <button id="menu-btn" type="button" class="hamburger z-40 block md:hidden focus:outline-none">
+            <span class="hamburger-top"></span>
+            <span class="hamburger-middle"></span>
+            <span class="hamburger-bottom"></span>
+          </button>
+        </div>
       </nav>
-      <!-- @todo Mobile menu -->
+      <!-- Mobile menu -->
+      <div id="menu"
+        class="absolute top-0 bottom-0 left-0 flex-col self-end hidden w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black">
+        <a href="#" class="hover:text-pink-500">About</a>
+        <a href="#" class="hover:text-pink-500">Careers</a>
+        <a href="#" class="hover:text-pink-500">Events</a>
+        <a href="#" class="hover:text-pink-500">Products</a>
+        <a href="#" class="hover:text-pink-500">Support</a>
+      </div>
 
       <div
         class="max-w-lg mt-32 mb-32 p-4 font-sans text-4xl text-white border-2 uppercase md:p-10 md:m-32 md:mx-0 md:text-5xl">
